feat: enhance teaching agent workspaces